# urban-heat-TARGET

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  app.py  environment.yml  phase1_plan.md  pyproject.toml  tile_server.py  urban_climate_pipeline_spec_v2.md
.streamlit/: config.toml
hit/cities/: __init__.py  loader.py  search.py
hit/config/: city.py
hit/era5/: __init__.py  arco.py  baseline.py  forcing.py  indices.py  periods.py
hit/exposure/: __init__.py
hit/jobs/: queue.py  worker.py  worker_prepare.py
hit/spatial/: __init__.py  rasterise.py
scripts/: deploy.sh  startup.sh
scripts/profiling/: profile_salvador.py
tests/: test_target_parity.py  test_target_patches.py
